--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <table>
                 <tr>
                     <td>
-                        <a href="https://nesus3ch4n.github.io/">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </td>
                     <td>
                         <a href="unidad1.html">Unidad 1</a>
@@ -26,6 +26,10 @@
                     </td>
                     <td>
                         <a href="unidad3.html">Unidad 3</a>
+                    </td>
+
+                    <td>
+                        <a href="index2.html">POW</a>
                     </td>
                 </tr>
             </table>
