--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
     <head>
         <title></title>
         <meta charset="UTF-8">
@@ -107,7 +107,7 @@
                     <img src="img/janina.png" alt>
                     <p> <span
                             class="material-symbols-outlined">person</span>Ingeniera
-                        de sistemas, octavo semestre.
+                        de sistemas, octavo semestre, experiencia en seguridad de la informacion y redes de datos
                     </p>
                     <p><span class="material-symbols-outlined">
                             contact_mail
